<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_home_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        tools:text="@string/home_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_home_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:text="@string/home_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_visitor_name"
        app:layout_constraintStart_toEndOf="@+id/tv_home_name"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_visitor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:text="@string/visitor_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_visitor_score"
        app:layout_constraintStart_toEndOf="@+id/tv_home_score"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_visitor_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:text="@string/visitor_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_visitor_name"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

</androidx.constraintlayout.widget.ConstraintLayout>