<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.players.PlayersFragment">

    <TextView
        android:id="@+id/tv_title_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/players"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_grey_rounded_32"
        android:hint="@string/search"
        android:inputType="textFilter"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/rv_nba_players"
        app:layout_constraintStart_toStartOf="@+id/rv_nba_players"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_players"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_first_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_team"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_first_name"
        app:layout_constraintTop_toTopOf="@+id/tv_first_name" />

    <TextView
        android:id="@+id/tv_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_first_name"
        app:layout_constraintEnd_toEndOf="@+id/material_divider"
        app:layout_constraintStart_toEndOf="@+id/tv_last_name"
        app:layout_constraintTop_toTopOf="@+id/tv_first_name" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/material_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rv_nba_players"
        app:layout_constraintStart_toStartOf="@+id/rv_nba_players"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_nba_players"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_divider"
        tools:listitem="@layout/adapter_teams_players_item" />

</androidx.constraintlayout.widget.ConstraintLayout>