<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teamData.TeamDataFragment">

    <TextView
        android:id="@+id/tv_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_back_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_back_home"
        tools:text="Team" />

    <TextView
        android:id="@+id/tv_home_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:paddingHorizontal="8dp"
        android:text="@string/home_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_home_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_back_home" />

    <TextView
        android:id="@+id/tv_home_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/home_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_visitor_name"
        app:layout_constraintStart_toEndOf="@+id/tv_home_name"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_visitor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/visitor_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_visitor_score"
        app:layout_constraintStart_toEndOf="@+id/tv_home_score"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <TextView
        android:id="@+id/tv_visitor_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:paddingHorizontal="8dp"
        android:text="@string/visitor_score"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_visitor_name"
        app:layout_constraintTop_toTopOf="@+id/tv_home_name" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/material_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_visitor_score"
        app:layout_constraintStart_toStartOf="@+id/tv_home_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_nba_teams_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material_divider"
        tools:listitem="@layout/adapter_team_data_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>